[gd_scene load_steps=32 format=3 uid="uid://b5cq4s68gfarp"]

[ext_resource type="Script" path="res://Scenes/RightSidetscn.gd" id="1_bbgw8"]
[ext_resource type="Texture2D" uid="uid://cdnhcvhku5cd0" path="res://Textures/Right_side_background.png" id="1_mdlbc"]
[ext_resource type="Script" path="res://Scripts/Gracz2.gd" id="2_a1xjw"]
[ext_resource type="Texture2D" uid="uid://drvg7gicj0j64" path="res://Textures/fart_clouds.png" id="2_ghh53"]
[ext_resource type="PackedScene" uid="uid://dor22xoeew4dv" path="res://Scenes/Pasek.tscn" id="3_8nmv7"]
[ext_resource type="Texture2D" uid="uid://dhy8wlhrj4y46" path="res://Textures/stomacz_outline.png" id="4_2h05x"]
[ext_resource type="Texture2D" uid="uid://x0qp7fgi87t5" path="res://Textures/2x2.png" id="4_fi3va"]
[ext_resource type="Texture2D" uid="uid://chpa5u1rpilsx" path="res://Textures/Spiner_green.png" id="5_5natd"]
[ext_resource type="Texture2D" uid="uid://cpb5qb5nesect" path="res://Textures/GasChamber.png" id="6_44pep"]
[ext_resource type="PackedScene" uid="uid://b7nx6ynk1ets0" path="res://Scenes/Spiner.tscn" id="6_cc6qd"]
[ext_resource type="Texture2D" uid="uid://bcged5qgmqurf" path="res://Textures/Spiner_red.png" id="6_jgemg"]
[ext_resource type="Texture2D" uid="uid://pn3328x0jtnv" path="res://Textures/stomacz_progress.png" id="6_uqupv"]
[ext_resource type="Texture2D" uid="uid://dmyv54vsutga2" path="res://Textures/GasChamber_fill.png" id="7_e25bb"]
[ext_resource type="Texture2D" uid="uid://b6kisq5k01lp2" path="res://Textures/GasChamber_fill_open.png" id="8_wtjmd"]
[ext_resource type="Texture2D" uid="uid://dyij7o7sue4ao" path="res://Textures/tompka.png" id="9_ee7ml"]
[ext_resource type="Texture2D" uid="uid://cwc6v5fpc3hbe" path="res://Textures/dot.png" id="11_n825l"]
[ext_resource type="Texture2D" uid="uid://bsp0sqhlfjnts" path="res://Textures/3x3.png" id="12_lf5c2"]
[ext_resource type="Texture2D" uid="uid://rfmtgs0uwp1r" path="res://Textures/Lever_base.png" id="16_3c2u4"]
[ext_resource type="Texture2D" uid="uid://didg4uyird4g3" path="res://Textures/Lever-lever.png" id="17_8x1ri"]

[sub_resource type="Gradient" id="Gradient_l6ims"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dnnht"]
gradient = SubResource("Gradient_l6ims")
width = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ninw"]

[sub_resource type="Curve" id="Curve_6pqv5"]
_data = [Vector2(0, 0.506424), 0.0, 1.11174, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_d5qx5"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_vxfkn"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_t6m3k"]
gradient = SubResource("Gradient_vxfkn")

[sub_resource type="Curve" id="Curve_155bm"]
_data = [Vector2(0, 0.376932), 0.0, 1.4, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_elh12"]
curve = SubResource("Curve_155bm")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qhbqd"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 360.0
direction = Vector3(0, 1, 0)
spread = 16.472
initial_velocity_max = 99.0
gravity = Vector3(0, 0, 0)
damping_max = 1.0
scale_min = 0.3
scale_max = 0.3
scale_curve = SubResource("CurveTexture_elh12")
color = Color(0.741152, 0.79, 0.3713, 1)
color_ramp = SubResource("GradientTexture1D_t6m3k")

[sub_resource type="GDScript" id="GDScript_bhbwh"]
script/source = "extends Marker2D

@onready var dot = %Dot
@onready var sprite_2d = $Sprite2D

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	var vektor_to = to_local(dot.global_position)
	sprite_2d.scale.x = vektor_to.length()/3.0
	sprite_2d.position = vektor_to*0.5
	sprite_2d.rotation = vektor_to.angle()
"

[sub_resource type="GDScript" id="GDScript_53iep"]
script/source = "extends Sprite2D


var previous_mouse_position := Vector2.ZERO
var value:= 0.0
var is_on := false
var is_forced := false
@onready var button = $Button
signal toggled

func _ready():
	#button.pivot_offset = texture.get_size() * 0.5
	#button.position = -button.pivot_offset
	set_physics_process(false)

func _physics_process(delta):
	if is_forced: 
		value += 0.5 * delta
		value = min(value, PI)
	else:
		var angle_difference = atan2(previous_mouse_position.cross(get_local_mouse_position()), previous_mouse_position.dot(get_local_mouse_position()) )
		previous_mouse_position = get_local_mouse_position()
		value += angle_difference
		value = clamp(value, 0.0, PI)
	button.rotation = value -PI*0.5
	if value > PI*0.9:
		is_on = true
	elif value < PI*0.1:
		is_on = false



func _on_button_down():
	if not is_forced:
		set_physics_process(true)
		previous_mouse_position = get_local_mouse_position()


func _on_button_up():
	if not is_forced:
		set_physics_process(false)

func toggle():
	value = PI
	button.rotation = value -PI*0.5
	is_on = true
	is_forced = true
	set_physics_process(true)
	
func unblock():
	is_forced = false
	set_physics_process(false)
"

[node name="RightSide" type="Node2D"]
script = ExtResource("1_bbgw8")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1160.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_dnnht")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.501961, 0.501961, 0.501961, 1)
texture = ExtResource("1_mdlbc")
centered = false
metadata/_edit_lock_ = true

[node name="Lines" type="Node2D" parent="Sprite2D"]

[node name="2x2" type="Sprite2D" parent="Sprite2D/Lines"]
position = Vector2(714, 41)
scale = Vector2(135, 2)
texture = ExtResource("4_fi3va")

[node name="2x3" type="Sprite2D" parent="Sprite2D/Lines"]
position = Vector2(714, 81)
scale = Vector2(80, 2)
texture = ExtResource("4_fi3va")

[node name="2x4" type="Sprite2D" parent="Sprite2D/Lines"]
position = Vector2(708, 121)
scale = Vector2(30, 2)
texture = ExtResource("4_fi3va")

[node name="2x8" type="Sprite2D" parent="Sprite2D/Lines"]
position = Vector2(521, 376)
scale = Vector2(135, 2)
texture = ExtResource("4_fi3va")

[node name="2x12" type="Sprite2D" parent="Sprite2D/Lines"]
position = Vector2(586, 474)
scale = Vector2(205, 2)
texture = ExtResource("4_fi3va")

[node name="2x9" type="Sprite2D" parent="Sprite2D/Lines"]
position = Vector2(506, 336)
scale = Vector2(95.5, 2)
texture = ExtResource("4_fi3va")

[node name="2x10" type="Sprite2D" parent="Sprite2D/Lines"]
position = Vector2(480.25, 296)
scale = Vector2(72.25, 2)
texture = ExtResource("4_fi3va")

[node name="2x5" type="Sprite2D" parent="Sprite2D/Lines"]
position = Vector2(736, 169)
rotation = 1.57079
scale = Vector2(50, 2)
texture = ExtResource("4_fi3va")

[node name="2x6" type="Sprite2D" parent="Sprite2D/Lines"]
position = Vector2(792, 113)
rotation = 1.57079
scale = Vector2(35, 2)
texture = ExtResource("4_fi3va")

[node name="2x11" type="Sprite2D" parent="Sprite2D/Lines"]
position = Vector2(410, 329)
rotation = 1.57079
scale = Vector2(35, 2)
texture = ExtResource("4_fi3va")

[node name="2x7" type="Sprite2D" parent="Sprite2D/Lines"]
position = Vector2(847, 59)
rotation = 1.57079
scale = Vector2(20, 2)
texture = ExtResource("4_fi3va")

[node name="Stomanch" type="TextureProgressBar" parent="Sprite2D"]
unique_name_in_owner = true
offset_left = 316.0
offset_top = 309.0
offset_right = 423.0
offset_bottom = 414.0
value = 40.0
fill_mode = 3
texture_under = ExtResource("4_2h05x")
texture_progress = ExtResource("6_uqupv")

[node name="Gas" type="TextureProgressBar" parent="Sprite2D"]
unique_name_in_owner = true
z_index = 2
offset_left = 317.0
offset_top = 396.0
offset_right = 424.0
offset_bottom = 501.0
rotation = -0.724312
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(64, 54)
value = 100.0
fill_mode = 3
texture_under = ExtResource("6_44pep")
texture_over = ExtResource("7_e25bb")
texture_progress = ExtResource("8_wtjmd")
tint_over = Color(1, 1, 1, 0)

[node name="SpinerBlue" parent="Sprite2D" instance=ExtResource("6_cc6qd")]
position = Vector2(847, 78)
scale = Vector2(0.4, 0.4)

[node name="SpinerGreen" parent="Sprite2D" instance=ExtResource("6_cc6qd")]
position = Vector2(792, 146)
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_5natd")

[node name="SpinerRed" parent="Sprite2D" instance=ExtResource("6_cc6qd")]
position = Vector2(736, 215)
scale = Vector2(0.4, 0.4)
texture = ExtResource("6_jgemg")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D"]
position = Vector2(370, 494)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/StaticBody2D"]
rotation = 1.57079
shape = SubResource("RectangleShape2D_7ninw")

[node name="Line2D" type="Line2D" parent="Sprite2D"]
z_index = 1
position = Vector2(370, 502)
points = PackedVector2Array(4, -45, 0, -30, 0, 0, 0, 20, 0, 40, 0, 60)
width = 62.625
width_curve = SubResource("Curve_6pqv5")
texture = ExtResource("9_ee7ml")
texture_mode = 2
joint_mode = 2

[node name="PinJoint2D" type="PinJoint2D" parent="Sprite2D"]
unique_name_in_owner = true
position = Vector2(370, 502)
node_a = NodePath("../StaticBody2D")
node_b = NodePath("../RigidBody2D")
angular_limit_enabled = true
angular_limit_lower = -0.0349066
angular_limit_upper = 0.0349066

[node name="PinJoint2D2" type="PinJoint2D" parent="Sprite2D"]
unique_name_in_owner = true
position = Vector2(370, 519)
node_a = NodePath("../RigidBody2D")
node_b = NodePath("../RigidBody2D2")
angular_limit_enabled = true
angular_limit_lower = -0.0872665
angular_limit_upper = 0.0872665

[node name="PinJoint2D3" type="PinJoint2D" parent="Sprite2D"]
unique_name_in_owner = true
position = Vector2(370, 537)
node_a = NodePath("../RigidBody2D2")
node_b = NodePath("../RigidBodyEND")
angular_limit_enabled = true
angular_limit_lower = -0.0872665
angular_limit_upper = 0.0872665

[node name="RigidBody2D" type="RigidBody2D" parent="Sprite2D"]
unique_name_in_owner = true
position = Vector2(370, 510)
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/RigidBody2D"]
shape = SubResource("RectangleShape2D_7ninw")

[node name="RigidBody2D2" type="RigidBody2D" parent="Sprite2D"]
unique_name_in_owner = true
position = Vector2(370, 528)
rotation = 1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/RigidBody2D2"]
shape = SubResource("RectangleShape2D_7ninw")

[node name="RigidBodyEND" type="RigidBody2D" parent="Sprite2D"]
unique_name_in_owner = true
position = Vector2(370, 546)
rotation = 1.57079
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/RigidBodyEND"]
shape = SubResource("RectangleShape2D_7ninw")

[node name="FartHole" type="GPUParticles2D" parent="Sprite2D/RigidBodyEND"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_d5qx5")
position = Vector2(8, 4.98453e-05)
rotation = -1.57079
amount = 256
process_material = SubResource("ParticleProcessMaterial_qhbqd")
texture = ExtResource("2_ghh53")

[node name="Dot" type="Sprite2D" parent="Sprite2D/RigidBodyEND"]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, 1.08401e-05)
rotation = -1.57079
texture = ExtResource("11_n825l")

[node name="DampedSpringJoint2D" type="DampedSpringJoint2D" parent="Sprite2D"]
position = Vector2(370, 502)
node_a = NodePath("../StaticBody2D")
node_b = NodePath("../RigidBodyEND")
rest_length = 50.0

[node name="Marker2D" type="Marker2D" parent="Sprite2D"]
position = Vector2(473, 492.5)
script = SubResource("GDScript_bhbwh")

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D/Marker2D"]
modulate = Color(0.5, 0.5, 0.5, 1)
z_index = 1
texture = ExtResource("12_lf5c2")

[node name="Lever_base" type="Sprite2D" parent="Sprite2D"]
unique_name_in_owner = true
position = Vector2(792, 426)
rotation = -1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("16_3c2u4")
script = SubResource("GDScript_53iep")

[node name="Button" type="TextureButton" parent="Sprite2D/Lever_base"]
offset_left = -120.0
offset_top = -70.0
offset_right = 468.0
offset_bottom = 76.0
rotation = -1.5708
pivot_offset = Vector2(62.705, 66.145)
texture_normal = ExtResource("17_8x1ri")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 3
script = ExtResource("2_a1xjw")

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 2
offset_left = 515.0
offset_top = 13.0
offset_right = 624.0
offset_bottom = 36.0
text = "Carbs"
horizontal_alignment = 1

[node name="blue" parent="CanvasLayer/Control" instance=ExtResource("3_8nmv7")]
unique_name_in_owner = true
modulate = Color(0, 0, 1, 1)
layout_mode = 0
offset_left = 549.0
offset_top = 40.0
offset_right = 581.0
offset_bottom = 296.0

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
layout_mode = 2
offset_left = 569.0
offset_top = 53.0
offset_right = 678.0
offset_bottom = 76.0
text = "Fatass"
horizontal_alignment = 1

[node name="green" parent="CanvasLayer/Control" instance=ExtResource("3_8nmv7")]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = 600.0
offset_top = 80.0
offset_right = 632.0
offset_bottom = 336.0

[node name="Label3" type="Label" parent="CanvasLayer/Control"]
layout_mode = 2
offset_left = 628.0
offset_top = 93.0
offset_right = 737.0
offset_bottom = 116.0
text = "Proteins"
horizontal_alignment = 1

[node name="red" parent="CanvasLayer/Control" instance=ExtResource("3_8nmv7")]
unique_name_in_owner = true
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 649.0
offset_top = 120.0
offset_right = 681.0
offset_bottom = 376.0

[connection signal="button_down" from="Sprite2D/Lever_base/Button" to="Sprite2D/Lever_base" method="_on_button_down"]
[connection signal="button_up" from="Sprite2D/Lever_base/Button" to="Sprite2D/Lever_base" method="_on_button_up"]
